--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "formik": "^2.2.9",
+    "nanoid": "^3.1.30",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
